--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/Users/roshan/Downloads/Software/commons-csv-1.2.jar"/>
+	<classpathentry kind="lib" path="/Users/roshan/Downloads/zql/classes"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
